preparing for datastore

--- a/saltylist/index.yaml
+++ b/saltylist/index.yaml
@@ -5,3 +5,10 @@ indexes:
   properties:
   - name: timestamp
     direction: desc
+
+- kind: rule
+  ancestor: yes
+  properties:
+  - name: active
+  - name: create_dt
+    direction: asc
